# django-openai-asisstant-api-server

./: .env -sample  README.md  pyproject.toml
api/: admin.py  apps.py  models.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_message_platform.py  0003_message_topic.py
assistant/: celery.py  settings.py  urls.py
hotel_bot/: assistant.py  utils.py
hotel_bot/integrations/: default.py  telegram.py
hotel_bot/integrations_archive/: default.py  discord.py  twilio.py  voiceflow.py
hotel_bot/tools/: get_book_url.py
hotel_bot/tools_archive/news-agency/: fetch_news_summary.py  signup_newsletter.py  unsubscribe_newsletter.py
hotel_bot/tools_archive/real-estate/: analyze_image.py  schedule_property_viewing.py  search_real_estate_listings.py  store_lead.py
hotel_bot/tools_archive/utility/: get_current_datetime.py
